src/impera/parser/imperaParser.py
# @PydevCodeAnalysisIgnore
# $ANTLR 3.5.2 impera.g 2016-04-08 15:45:48

import sys
from antlr3 import *

from antlr3.tree import *




# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
EOF=-1
T__46=46
T__47=47
T__48=48
T__49=49
T__50=50
T__51=51
T__52=52
T__53=53
T__54=54
T__55=55
T__56=56
T__57=57
T__58=58
T__59=59
T__60=60
T__61=61
T__62=62
T__63=63
T__64=64
T__65=65
T__66=66
T__67=67
T__68=68
T__69=69
T__70=70
T__71=71
T__72=72
T__73=73
T__74=74
T__75=75
T__76=76
T__77=77
T__78=78
T__79=79
ASSIGN=4
ATTR=5
CALL=6
CLASS_ID=7
CLASS_REF=8
COMMENT=9
CONSTRUCT=10
DEF_DEFAULT=11
DEF_ENTITY=12
DEF_IMPLEMENT=13
DEF_IMPLEMENTATION=14
DEF_RELATION=15
DEF_TYPE=16
ENUM=17
ESC_SEQ=18
EXPONENT=19
FALSE=20
FLOAT=21
FOR=22
HASH=23
HEX_DIGIT=24
ID=25
INCLUDE=26
INDEX=27
INT=28
LAMBDA=29
LIST=30
ML_STRING=31
MULT=32
NONE=33
NS=34
OCTAL_ESC=35
OP=36
ORPHAN=37
REF=38
REGEX=39
STATEMENT=40
STRING=41
TRUE=42
UNICODE_ESC=43
VAR_REF=44
WS=45

# token names
tokenNamesMap = {
    0: "<invalid>", 1: "<EOR>", 2: "<DOWN>", 3: "<UP>",
    -1: "EOF", 46: "T__46", 47: "T__47", 48: "T__48", 49: "T__49", 50: "T__50", 
    51: "T__51", 52: "T__52", 53: "T__53", 54: "T__54", 55: "T__55", 56: "T__56", 
    57: "T__57", 58: "T__58", 59: "T__59", 60: "T__60", 61: "T__61", 62: "T__62", 
    63: "T__63", 64: "T__64", 65: "T__65", 66: "T__66", 67: "T__67", 68: "T__68", 
    69: "T__69", 70: "T__70", 71: "T__71", 72: "T__72", 73: "T__73", 74: "T__74", 
    75: "T__75", 76: "T__76", 77: "T__77", 78: "T__78", 79: "T__79", 4: "ASSIGN", 
    5: "ATTR", 6: "CALL", 7: "CLASS_ID", 8: "CLASS_REF", 9: "COMMENT", 10: "CONSTRUCT", 
    11: "DEF_DEFAULT", 12: "DEF_ENTITY", 13: "DEF_IMPLEMENT", 14: "DEF_IMPLEMENTATION", 
    15: "DEF_RELATION", 16: "DEF_TYPE", 17: "ENUM", 18: "ESC_SEQ", 19: "EXPONENT", 
    20: "FALSE", 21: "FLOAT", 22: "FOR", 23: "HASH", 24: "HEX_DIGIT", 25: "ID", 
    26: "INCLUDE", 27: "INDEX", 28: "INT", 29: "LAMBDA", 30: "LIST", 31: "ML_STRING", 
    32: "MULT", 33: "NONE", 34: "NS", 35: "OCTAL_ESC", 36: "OP", 37: "ORPHAN", 
    38: "REF", 39: "REGEX", 40: "STATEMENT", 41: "STRING", 42: "TRUE", 43: "UNICODE_ESC", 
    44: "VAR_REF", 45: "WS"
}
Token.registerTokenNamesMap(tokenNamesMap)

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>",
    "ASSIGN", "ATTR", "CALL", "CLASS_ID", "CLASS_REF", "COMMENT", "CONSTRUCT", 
    "DEF_DEFAULT", "DEF_ENTITY", "DEF_IMPLEMENT", "DEF_IMPLEMENTATION", 
    "DEF_RELATION", "DEF_TYPE", "ENUM", "ESC_SEQ", "EXPONENT", "FALSE", 
    "FLOAT", "FOR", "HASH", "HEX_DIGIT", "ID", "INCLUDE", "INDEX", "INT", 
    "LAMBDA", "LIST", "ML_STRING", "MULT", "NONE", "NS", "OCTAL_ESC", "OP", 
    "ORPHAN", "REF", "REGEX", "STATEMENT", "STRING", "TRUE", "UNICODE_ESC", 
    "VAR_REF", "WS", "'!='", "'('", "')'", "','", "'--'", "'->'", "'.'", 
    "':'", "'::'", "'<'", "'<-'", "'<='", "'='", "'=='", "'>'", "'>='", 
    "'['", "']'", "'and'", "'as'", "'end'", "'entity'", "'extends'", "'for'", 
    "'implement'", "'implementation'", "'in'", "'index'", "'matching'", 
    "'not'", "'or'", "'typedef'", "'using'", "'when'"
]



class imperaParser(Parser):
    grammarFileName = "impera.g"
    api_version = 1
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super().__init__(input, state, *args, **kwargs)

        self.dfa1 = self.DFA1(
            self, 1,
            eot = self.DFA1_eot,
            eof = self.DFA1_eof,
            min = self.DFA1_min,
            max = self.DFA1_max,
            accept = self.DFA1_accept,
            special = self.DFA1_special,
            transition = self.DFA1_transition
            )

        self.dfa14 = self.DFA14(
            self, 14,
            eot = self.DFA14_eot,
            eof = self.DFA14_eof,
            min = self.DFA14_min,
            max = self.DFA14_max,
            accept = self.DFA14_accept,
            special = self.DFA14_special,
            transition = self.DFA14_transition
            )

        self.dfa20 = self.DFA20(
            self, 20,
            eot = self.DFA20_eot,
            eof = self.DFA20_eof,
            min = self.DFA20_min,
            max = self.DFA20_max,
            accept = self.DFA20_accept,
            special = self.DFA20_special,
            transition = self.DFA20_transition
            )

        self.dfa30 = self.DFA30(
            self, 30,
            eot = self.DFA30_eot,
            eof = self.DFA30_eof,
            min = self.DFA30_min,
            max = self.DFA30_max,
            accept = self.DFA30_accept,
            special = self.DFA30_special,
            transition = self.DFA30_transition
            )




        self.delegates = []

        self._adaptor = None
        self.adaptor = CommonTreeAdaptor()



    def getTreeAdaptor(self):
        return self._adaptor

    def setTreeAdaptor(self, adaptor):
        self._adaptor = adaptor

    adaptor = property(getTreeAdaptor, setTreeAdaptor)


    class main_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.tree = None





    # $ANTLR start "main"
    # impera.g:38:1: main : ( def_statement | top_statement | ML_STRING )* -> ^( LIST ( def_statement )* ( top_statement )* ( ML_STRING )* ) ;
    def main(self, ):
        retval = self.main_return()
        retval.start = self.input.LT(1)


        root_0 = None

        ML_STRING3 = None
        def_statement1 = None
        top_statement2 = None

        ML_STRING3_tree = None
        stream_ML_STRING = RewriteRuleTokenStream(self._adaptor, "token ML_STRING")
        stream_def_statement = RewriteRuleSubtreeStream(self._adaptor, "rule def_statement")
        stream_top_statement = RewriteRuleSubtreeStream(self._adaptor, "rule top_statement")
        try:
            try:
                # impera.g:39:2: ( ( def_statement | top_statement | ML_STRING )* -> ^( LIST ( def_statement )* ( top_statement )* ( ML_STRING )* ) )
                # impera.g:39:4: ( def_statement | top_statement | ML_STRING )*
                pass 
                # impera.g:39:4: ( def_statement | top_statement | ML_STRING )*
                while True: #loop1
                    alt1 = 4
                    alt1 = self.dfa1.predict(self.input)
                    if alt1 == 1:
                        # impera.g:39:5: def_statement
                        pass 
                        self._state.following.append(self.FOLLOW_def_statement_in_main153)
                        def_statement1 = self.def_statement()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            stream_def_statement.add(def_statement1.tree)



                    elif alt1 == 2:
                        # impera.g:39:21: top_statement
                        pass 
                        self._state.following.append(self.FOLLOW_top_statement_in_main157)
                        top_statement2 = self.top_statement()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            stream_top_statement.add(top_statement2.tree)



                    elif alt1 == 3:
                        # impera.g:39:37: ML_STRING
                        pass 
                        ML_STRING3 = self.match(self.input, ML_STRING, self.FOLLOW_ML_STRING_in_main161) 
                        if self._state.backtracking == 0:
                            stream_ML_STRING.add(ML_STRING3)



                    else:
                        break #loop1


                # AST Rewrite
                # elements: def_statement, ML_STRING, top_statement
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                if self._state.backtracking == 0:
                    retval.tree = root_0
                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 39:49: -> ^( LIST ( def_statement )* ( top_statement )* ( ML_STRING )* )
                    # impera.g:39:52: ^( LIST ( def_statement )* ( top_statement )* ( ML_STRING )* )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(
                    self._adaptor.createFromType(LIST, "LIST")
                    , root_1)

                    # impera.g:39:59: ( def_statement )*
                    while stream_def_statement.hasNext():
                        self._adaptor.addChild(root_1, stream_def_statement.nextTree())


                    stream_def_statement.reset();

                    # impera.g:39:74: ( top_statement )*
                    while stream_top_statement.hasNext():
                        self._adaptor.addChild(root_1, stream_top_statement.nextTree())


                    stream_top_statement.reset();

                    # impera.g:39:89: ( ML_STRING )*
                    while stream_ML_STRING.hasNext():
                        self._adaptor.addChild(root_1, 
                        stream_ML_STRING.nextNode()
                        )


                    stream_ML_STRING.reset();

                    self._adaptor.addChild(root_0, root_1)




                    retval.tree = root_0





                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "main"


    class def_statement_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.tree = None





    # $ANTLR start "def_statement"
    # impera.g:42:1: def_statement : ( typedef | entity_def | implementation_def | relation | index | implement_def );
    def def_statement(self, ):
        retval = self.def_statement_return()
        retval.start = self.input.LT(1)


        root_0 = None

        typedef4 = None
        entity_def5 = None
        implementation_def6 = None
        relation7 = None
        index8 = None
        implement_def9 = None


        try:
            try:
                # impera.g:43:2: ( typedef | entity_def | implementation_def | relation | index | implement_def )
                alt2 = 6
                LA2 = self.input.LA(1)
                if LA2 in {77}:
                    alt2 = 1
                elif LA2 in {67}:
                    alt2 = 2
                elif LA2 in {71}:
                    alt2 = 3
                elif LA2 in {CLASS_ID, ID}:
                    alt2 = 4
                elif LA2 in {73}:
                    alt2 = 5
                elif LA2 in {70}:
                    alt2 = 6
                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed


                    nvae = NoViableAltException("", 2, 0, self.input)

                    raise nvae


                if alt2 == 1:
                    # impera.g:43:4: typedef
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_typedef_in_def_statement189)
                    typedef4 = self.typedef()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, typedef4.tree)



                elif alt2 == 2:
                    # impera.g:43:14: entity_def
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_entity_def_in_def_statement193)
                    entity_def5 = self.entity_def()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, entity_def5.tree)



                elif alt2 == 3:
                    # impera.g:43:27: implementation_def
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_implementation_def_in_def_statement197)
                    implementation_def6 = self.implementation_def()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, implementation_def6.tree)



                elif alt2 == 4:
                    # impera.g:43:48: relation
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_relation_in_def_statement201)
                    relation7 = self.relation()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, relation7.tree)



                elif alt2 == 5:
                    # impera.g:43:59: index
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_index_in_def_statement205)
                    index8 = self.index()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, index8.tree)



                elif alt2 == 6:
                    # impera.g:43:67: implement_def
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_implement_def_in_def_statement209)
                    implement_def9 = self.implement_def()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, implement_def9.tree)



                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "def_statement"


    class typedef_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.tree = None





    # $ANTLR start "typedef"
    # impera.g:46:1: typedef : ( 'typedef' ID 'as' ns_ref 'matching' ( REGEX | expression ) -> ^( DEF_TYPE ID ns_ref ( expression )? ( REGEX )? ) | 'typedef' CLASS_ID 'as' constructor -> ^( DEF_DEFAULT CLASS_ID constructor ) );
    def typedef(self, ):
        retval = self.typedef_return()
        retval.start = self.input.LT(1)


        root_0 = None

        string_literal10 = None
        ID11 = None
        string_literal12 = None
        string_literal14 = None
        REGEX15 = None
        string_literal17 = None
        CLASS_ID18 = None
        string_literal19 = None
        ns_ref13 = None
        expression16 = None
        constructor20 = None

        string_literal10_tree = None
        ID11_tree = None
        string_literal12_tree = None
        string_literal14_tree = None
        REGEX15_tree = None
        string_literal17_tree = None
        CLASS_ID18_tree = None
        string_literal19_tree = None
        stream_77 = RewriteRuleTokenStream(self._adaptor, "token 77")
        stream_REGEX = RewriteRuleTokenStream(self._adaptor, "token REGEX")
        stream_ID = RewriteRuleTokenStream(self._adaptor, "token ID")
        stream_74 = RewriteRuleTokenStream(self._adaptor, "token 74")
        stream_CLASS_ID = RewriteRuleTokenStream(self._adaptor, "token CLASS_ID")
        stream_65 = RewriteRuleTokenStream(self._adaptor, "token 65")
        stream_expression = RewriteRuleSubtreeStream(self._adaptor, "rule expression")
        stream_constructor = RewriteRuleSubtreeStream(self._adaptor, "rule constructor")
        stream_ns_ref = RewriteRuleSubtreeStream(self._adaptor, "rule ns_ref")
        try:
            try:
                # impera.g:47:2: ( 'typedef' ID 'as' ns_ref 'matching' ( REGEX | expression ) -> ^( DEF_TYPE ID ns_ref ( expression )? ( REGEX )? ) | 'typedef' CLASS_ID 'as' constructor -> ^( DEF_DEFAULT CLASS_ID constructor ) )
                alt4 = 2
                LA4_0 = self.input.LA(1)

                if (LA4_0 == 77) :
                    LA4_1 = self.input.LA(2)

                    if (LA4_1 == ID) :
                        alt4 = 1
                    elif (LA4_1 == CLASS_ID) :
                        alt4 = 2
                    else:
                        if self._state.backtracking > 0:
                            raise BacktrackingFailed


                        nvae = NoViableAltException("", 4, 1, self.input)

                        raise nvae


                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed


                    nvae = NoViableAltException("", 4, 0, self.input)

                    raise nvae


                if alt4 == 1:
                    # impera.g:47:4: 'typedef' ID 'as' ns_ref 'matching' ( REGEX | expression )
                    pass 
                    string_literal10 = self.match(self.input, 77, self.FOLLOW_77_in_typedef220) 
                    if self._state.backtracking == 0:
                        stream_77.add(string_literal10)


                    ID11 = self.match(self.input, ID, self.FOLLOW_ID_in_typedef222) 
                    if self._state.backtracking == 0:
                        stream_ID.add(ID11)


                    string_literal12 = self.match(self.input, 65, self.FOLLOW_65_in_typedef224) 
                    if self._state.backtracking == 0:
                        stream_65.add(string_literal12)


                    self._state.following.append(self.FOLLOW_ns_ref_in_typedef226)
                    ns_ref13 = self.ns_ref()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_ns_ref.add(ns_ref13.tree)


                    string_literal14 = self.match(self.input, 74, self.FOLLOW_74_in_typedef228) 
                    if self._state.backtracking == 0:
                        stream_74.add(string_literal14)


                    # impera.g:47:40: ( REGEX | expression )
                    alt3 = 2
                    LA3_0 = self.input.LA(1)

                    if (LA3_0 == REGEX) :
                        LA3_1 = self.input.LA(2)

                        if (LA3_1 in {EOF, CLASS_ID, ID, ML_STRING, 67, 69, 70, 71, 73, 77}) :
                            alt3 = 1
                        elif (LA3_1 in {46, 55, 57, 59, 60, 61, 72}) :
                            alt3 = 2
                        else:
                            if self._state.backtracking > 0:
                                raise BacktrackingFailed


                            nvae = NoViableAltException("", 3, 1, self.input)

                            raise nvae


                    elif (LA3_0 in {CLASS_ID, FALSE, FLOAT, ID, INT, ML_STRING, STRING, TRUE, 47, 62}) :
                        alt3 = 2
                    else:
                        if self._state.backtracking > 0:
                            raise BacktrackingFailed


                        nvae = NoViableAltException("", 3, 0, self.input)

                        raise nvae


                    if alt3 == 1:
                        # impera.g:47:41: REGEX
                        pass 
                        REGEX15 = self.match(self.input, REGEX, self.FOLLOW_REGEX_in_typedef231) 
                        if self._state.backtracking == 0:
                            stream_REGEX.add(REGEX15)



                    elif alt3 == 2:
                        # impera.g:47:49: expression
                        pass 
                        self._state.following.append(self.FOLLOW_expression_in_typedef235)
                        expression16 = self.expression()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            stream_expression.add(expression16.tree)





                    # AST Rewrite
                    # elements: ID, ns_ref, REGEX, expression
                    # token labels: 
                    # rule labels: retval
                    # token list labels: 
                    # rule list labels: 
                    # wildcard labels: 
                    if self._state.backtracking == 0:
                        retval.tree = root_0
                        if retval is not None:
                            stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                        else:
                            stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                        root_0 = self._adaptor.nil()
                        # 47:61: -> ^( DEF_TYPE ID ns_ref ( expression )? ( REGEX )? )
                        # impera.g:47:64: ^( DEF_TYPE ID ns_ref ( expression )? ( REGEX )? )
                        root_1 = self._adaptor.nil()
                        root_1 = self._adaptor.becomeRoot(
                        self._adaptor.createFromType(DEF_TYPE, "DEF_TYPE")
                        , root_1)

                        self._adaptor.addChild(root_1, 
                        stream_ID.nextNode()
                        )

                        self._adaptor.addChild(root_1, stream_ns_ref.nextTree())

                        # impera.g:47:85: ( expression )?
                        if stream_expression.hasNext():
                            self._adaptor.addChild(root_1, stream_expression.nextTree())


                        stream_expression.reset();

                        # impera.g:47:97: ( REGEX )?
                        if stream_REGEX.hasNext():
                            self._adaptor.addChild(root_1, 
                            stream_REGEX.nextNode()
                            )


                        stream_REGEX.reset();

                        self._adaptor.addChild(root_0, root_1)




                        retval.tree = root_0




                elif alt4 == 2:
                    # impera.g:48:4: 'typedef' CLASS_ID 'as' constructor
                    pass 
                    string_literal17 = self.match(self.input, 77, self.FOLLOW_77_in_typedef257) 
                    if self._state.backtracking == 0:
                        stream_77.add(string_literal17)


                    CLASS_ID18 = self.match(self.input, CLASS_ID, self.FOLLOW_CLASS_ID_in_typedef259) 
                    if self._state.backtracking == 0:
                        stream_CLASS_ID.add(CLASS_ID18)


                    string_literal19 = self.match(self.input, 65, self.FOLLOW_65_in_typedef261) 
                    if self._state.backtracking == 0:
                        stream_65.add(string_literal19)


                    self._state.following.append(self.FOLLOW_constructor_in_typedef263)
                    constructor20 = self.constructor()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_constructor.add(constructor20.tree)


                    # AST Rewrite
                    # elements: constructor, CLASS_ID
                    # token labels: 
                    # rule labels: retval
                    # token list labels: 
                    # rule list labels: 
                    # wildcard labels: 
                    if self._state.backtracking == 0:
                        retval.tree = root_0
                        if retval is not None:
                            stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                        else:
                            stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                        root_0 = self._adaptor.nil()
                        # 48:40: -> ^( DEF_DEFAULT CLASS_ID constructor )
                        # impera.g:48:43: ^( DEF_DEFAULT CLASS_ID constructor )
                        root_1 = self._adaptor.nil()
                        root_1 = self._adaptor.becomeRoot(
                        self._adaptor.createFromType(DEF_DEFAULT, "DEF_DEFAULT")
                        , root_1)

                        self._adaptor.addChild(root_1, 
                        stream_CLASS_ID.nextNode()
                        )

                        self._adaptor.addChild(root_1, stream_constructor.nextTree())

                        self._adaptor.addChild(root_0, root_1)




                        retval.tree = root_0




                retval.stop = self.input.LT(-1)


                if self._state.backtracking == 0:
                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException as re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "typedef"


    class entity_def_return(ParserRuleReturnScope):
        def __init__(self):
            super().__init__()

            self.tree = None





    # $ANTLR start "entity_def"
    # impera.g:51:1: entity_def : ( 'entity' CLASS_ID ( 'extends' class_ref ( ',' class_ref )* )? ) ':' ( ML_STRING )? ( entity_body )* 'end' -> ^( DEF_ENTITY CLASS_ID ^( LIST ( class_ref )* ) ^( LIST ( entity_body )* ) ( ML_STRING )? ) ;
    def entity_def(self, ):
        retval = self.entity_def_return()
        retval.start = self.input.LT(1)


        root_0 = None

        string_literal21 = None
        CLASS_ID22 = None
        string_literal23 = None
        char_literal25 = None
        char_literal27 = None
        ML_STRING28 = None
        string_literal30 = None
        class_ref24 = None
        class_ref26 = None
        entity_body29 = None
